# embedded-graphics-web-simulator

./: 1.js  CHANGELOG.md  Cargo.toml  README.md  index.js  package-lock.json  package.json
examples/animated/: Cargo.toml  README.md  index.html  package-lock.json
examples/animated/.cargo/: config.toml
examples/animated/run-wasm-cargo-bug/: Cargo.toml
examples/animated/run-wasm-cargo-bug/src/: main.rs
examples/animated/src/: lib.rs
examples/basic/: Cargo.toml  README.md  package-lock.json  package.json
examples/basic/.cargo/: config.toml
examples/basic/run-wasm/src/: main.rs
examples/basic/src/: lib.rs
examples/basic/static/: index.html
src/: display.rs  lib.rs  output_settings.rs  simulator.rs
