[package]
name = "embedded-graphics-web-simulator"
description = "A web simulator using rust-embedded library with wasm"
version = "0.4.0"
authors = ["Rahul Thakoor <rahul.thakoor@gmail.com>"]
edition = "2018"
categories = ["wasm", "embedded", "no-std"]
keywords = ["simulator", "graphics", "embedded", "no_std"]
repository = "https://github.com/rahul-thakoor/embedded-graphics-web-simulator"
readme = "README.md"
license = "MIT OR Apache-2.0"



[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
wasm-bindgen = "0.2.45"


[dependencies.web-sys]
version = "0.3.22"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'ImageData',
  'Window'
  ]


[dependencies.embedded-graphics]
version = "0.8.0"

[dependencies.js-sys]
version = "0.3"