[package]
name = "animated"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
# work around https://github.com/rust-lang/cargo/issues/10752
members = ["run-wasm-cargo-bug"]

[dependencies]
wasm-bindgen = "0.2.77"
embedded-graphics-web-simulator = { path = "../.." }
embedded-graphics = "0.8"
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
]
